--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Solo Runner</title>
+    <title>RunStrava Solo</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="style.css">
 </head>
@@ -66,11 +66,18 @@
                 </div>
             </div>
         </div>
+
+        <h3 class="section-title">Personal Records</h3>
+        <div class="card" id="pr-container">
+            <p style="text-align:center; color:#999; font-size:0.9rem;">No records yet.</p>
+        </div>
+
         <div style="display:flex; justify-content:space-between; align-items:center; margin-top:20px;">
             <h3 class="section-title" style="margin:0;">My Gear</h3>
             <button onclick="addShoe()" class="text-btn">+ Add Shoe</button>
         </div>
         <div class="card" id="gear-container" style="margin-top:10px;"></div>
+        
         <button onclick="resetData()" class="btn-danger">Reset All Data</button>
     </main>
 
@@ -80,7 +87,7 @@
             <span onclick="closeDetailModal()" class="close-btn">✕</span>
         </div>
         <div class="modal-content" style="padding:0;">
-            <div id="detail-map" style="height:250px; width:100%;"></div>
+            <div id="detail-map" style="height:300px; width:100%;"></div>
             
             <div style="padding:20px;">
                 <div class="card">
@@ -95,10 +102,8 @@
                     </div>
                 </div>
 
-                <h3 class="section-title">Best Efforts</h3>
-                <div class="card" id="best-efforts-container">
-                    <p style="color:#999; font-size:0.9rem;">No GPS data available for analysis.</p>
-                </div>
+                <h3 class="section-title">Best Efforts (This Run)</h3>
+                <div class="card" id="best-efforts-container"></div>
 
                 <div style="margin-top:20px; display:flex; gap:10px;">
                     <button onclick="openEditModal(currentDetailRunId)" class="btn-full" style="background:white; color:#333; border:1px solid #ddd; margin:0;">Edit</button>
